# conv-hls-overclocking

./: .gitmodules  CMakeLists.txt  README.md  options.cmake
hw/: CMakeLists.txt  conv_accel.cpp  convolution.cpp
inc/: clkwiz.h  conv_accel.h  convolution.h  golden_convolution.h  io.h  options.h.in  options.sw.h.in  perf_counter.h  tools.h
src/: clkwiz.cpp  error_rate.cpp  golden_convolution.cpp  io.cpp
tests/: CMakeLists.txt  convolution.cpp  stubs.cpp  tools.cpp
